UE04: Bereit zur Abnahme